--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -91,7 +91,7 @@ layout: default
                   {% include resume/publications.liquid %}
                 {% when 'skills' %}
                   {% include resume/skills.liquid %}
-                {% when 'other_talks' %}
+                {% when 'talks' %}
                   {% include resume/talks.liquid %}
                 {% when 'teaching_assistantship' %}
                   {% include resume/teaching.liquid %}
