--- a/_includes/resume/talks.liquid
+++ b/_includes/resume/talks.liquid
@@ -1,5 +1,5 @@
 <ul class="card-text font-weight-light list-group list-group-flush">
-  {% assign talks = data[1] | sort: 'date' | reverse %}
+  {% assign talks = data[1] %}
   {% for content in talks %}
     <li class="list-group-item">
       <div class="row">
